# atproto-rs

./: CONTRIBUTING.md  Cargo.toml  QUESTIONS.md  README.md  RESEARCH.md
atproto-client/: Cargo.toml
atproto-core/: Cargo.toml
atproto-core/lexicons/: app.bsky.actor.getProfile.json  com.atproto.account.create.json  com.atproto.account.createInviteCode.json  com.atproto.account.delete.json  com.atproto.account.get.json  com.atproto.account.requestDelete.json  com.atproto.account.requestPasswordReset.json  com.atproto.account.resetPassword.json
atproto-core/src/: error.rs  jwk.rs  lexicon.rs  lib.rs
atproto-core/testdata/: lexicon.json  lexicon_query.json  lexicon_token.json
atproto-pds/: Cargo.toml  Dockerfile  README.md  SPEC.md  build.rs
atproto-pds/src/: config.rs  configuration.rs  context.rs  main.rs  server.rs  state.rs  util.rs
atproto-pds/src/storage/: handle.rs  mod.rs  types.rs
scripts/: fetch_lexicons.py  generate_key.py  private_key_from_words.sh
