[package]
name = "atproto-core"
description = "Core atproto data structures and functions."
version = "0.1.0"
edition = "2021"
authors = ["Nick Gerakines <nick.gerakines@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ngerakines/atproto-rs"
homepage = "https://github.com/ngerakines/atproto-rs"
license = "MIT"
publish = false
keywords = ["atproto", "federation"]

[dependencies]
serde_json = { version = "1" }
serde = { version = "1", features = ["derive"] }
jsonschema = "0.16"
