[package]
name = "atproto-core"
description = "Core atproto data structures and functions."
version = "0.1.0"
edition = "2021"
authors = ["Nick Gerakines <nick.gerakines@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ngerakines/atproto-rs"
homepage = "https://github.com/ngerakines/atproto-rs"
license = "MIT"
publish = false
keywords = ["atproto", "federation"]

[dependencies]
anyhow = { version = "1.0.66", features = ["backtrace"] }
async-trait = {version = "0.1"}
jsonschema = "0.16"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
walkdir = "2"
