[package]
name = "atproto-core"
description = "Core atproto data structures and functions."
version = "0.1.0"
edition = "2021"
authors = ["Nick Gerakines <nick.gerakines@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ngerakines/atproto-rs"
homepage = "https://github.com/ngerakines/atproto-rs"
license = "MIT"
publish = false
keywords = ["atproto", "federation"]

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
async-trait = {version = "0.1"}
jsonschema = "0.16"
jsonwebtoken = "8"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1", features = ["full"] }
rfc6979 = "0.4.0"
ed25519 = "2.2.0"
ecdsa = "0.16.0"
dsa = "0.6.0"
k256 = "0.13.0"
p256 = "0.13.0"
rand_core = "0.6.4"
hex = "0.4.3"
chrono = "0.4.23"

[dev-dependencies]
walkdir = "2"

[[bin]]
name = "keys"
