[package]
name = "atproto-pds"
description = "An atproto personal data server implementation in rust."
version = "0.1.0"
edition = "2021"
authors = ["Nick Gerakines <nick.gerakines@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ngerakines/atproto-rs"
homepage = "https://github.com/ngerakines/atproto-rs"
license = "MIT"
publish = false
keywords = ["atproto", "federation"]
build = "build.rs"

[dependencies]
atproto-core = { path = "../atproto-core" }
clap = { version = "4.1.8", features = ["derive", "env"] }
anyhow = { version = "1.0.66", features = ["backtrace"] }
async-trait = {version = "0.1"}
axum = "0.6.7"
axum-server = {version = "0.4.6", features = ["tls-rustls"]}
backoff = "0.4.0"
chrono = {version = "0.4.23",  default-features = false, features = ["clock"]}
futures-util = "0.3.17"
futures = "0.3.26"
parking_lot = "0.12"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.94" }
tokio = { version = "1", features = ["full"] }
tokio-tasker = "1.2.0"
tower = { version = "0.4" }
tower-http = { version = "0.4", features = ["trace"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = "8"
rust-argon2 = "1.0"
