[package]
name = "atproto-pds"
description = "An atproto personal data server implementation in rust."
version = "0.1.0"
edition = "2021"
authors = ["Nick Gerakines <nick.gerakines@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ngerakines/atproto-rs"
homepage = "https://github.com/ngerakines/atproto-rs"
license = "MIT"
publish = false
keywords = ["atproto", "federation"]
build = "build.rs"

[dependencies]
atproto-core = { path = "../atproto-core" }

anyhow = { version = "1.0.71", features = ["backtrace"] }
async-trait = {version = "0.1"}
axum = "0.6.7"
axum-server = {version = "0.4.7", features = ["tls-rustls"]}
chrono = "0.4.24"
config = "0.13.3"

backoff = "0.4.0"

futures-util = "0.3.17"
futures = "0.3.26"
parking_lot = "0.12"
rand = "0.8"
tokio-tasker = "1.2.0"
jsonwebtoken = "8"
rust-argon2 = "1.0"
serde = {version = "1.0.160", features = ["derive"]}
serde_json = "1.0.96"
serde_yaml = "0.9.21"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4" }
tower-http = { version = "0.4", features = ["trace"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }